Add icons and most HTML, with basic css.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <body>
     <div id=home>
       <h1>Broadway Design</h1>
+      <p href="#">Home</p>
+      <p href="#">Process</p>
+      <p href="#">Work</p>
+      <p href="#">Team</p>
+      <p href="#">Contact</p>
+    </div>
+
+    <div id="process">
+      <h3>Our Process</h3>
+
+      <div id="identify">
+        <p><img src="Resources/images/identify.svg"/></p>
+        <h4>Identify</h4>
+        <p>We focus on the most important details.</p>
+      </div>
+
+      <div id="understand">
+        <p><img src="Resources/images/understand.svg"/></p>
+        <h4>Understand</h4>
+        <p>We study our projects inside and out.</p>
+      </div>
+
+      <div id="execute">
+        <p><img src="Resources/images/execute.svg"/></p>
+        <h4>Execute</h4>
+        <p>We put everything we have into our work.</p>
+      </div>
+    </div>
+
 
   </body>
 </html>
