--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="process">
       <h3>Our Process</h3>
 
+
       <div id="identify">
         <p><img src="Resources/images/identify.svg"/></p>
         <h4>Identify</h4>
@@ -37,5 +38,8 @@
     </div>
 
 
+    <div id="footer">
+      <h5 class="divide">Designed in New York</h5>
+      
   </body>
 </html>
