--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="Resources/css/style.css" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-    <div id=home>
+    <div class="home">
       <h1>Broadway Design</h1>
       <p href="#">Home</p>
       <p href="#">Process</p>
@@ -39,7 +39,21 @@
 
 
     <div id="footer">
-      <h5 class="divide">Designed in New York</h5>
-      
+      <h4 class="divide">Designed in New York</h4>
+
+      <h4>Portfolio</h4>
+      <p>Coming Soon</p>
+
+      <h4>Team</h4>
+      <p>We're Hiring!</p>
+
+      <h4>Contact</h4>
+      <p>Phone: (555) 555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter" @test</p>
+
+      <p>© Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a></p>
+    </div>
+
   </body>
 </html>
