--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   <body>
     <div class="home">
       <h1>Broadway Design</h1>
-      <p href="#">Home</p>
-      <p href="#">Process</p>
-      <p href="#">Work</p>
-      <p href="#">Team</p>
-      <p href="#">Contact</p>
+      <nav>
+        <p> <a href="#">Home</a></p>
+        <p> <a href="#">Process</a></p>
+        <p> <a href="#">Work</a></p>
+        <p> <a href="#">Team</a></p>
+        <p> <a href="#">Contact</a></p>
+      </nav>
     </div>
 
     <div id="process">
-      <h3>Our Process</h3>
+      <h2>Our Process</h2>
 
 
       <div id="identify">
@@ -52,7 +54,7 @@
       <p>E-mail: test@example.com</p>
       <p>Twitter" @test</p>
 
-      <p>© Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a></p>
+      <p class="bottom">© Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href="#">Work</a><a href="#">Team</a><a href="#">Contact</a></p>
     </div>
 
   </body>
